Adding login and authentication
