# Código/Proyecto_Web/app/Notifications/notifications.dto.js
@@ -1,6 +1,6 @@
 const _notification_id = Symbol('notificationId');
 const _notification_date = Symbol('notificationDate');
-const _notification_lecture_date = Symbol('notificationLectureDate');
+const _notification_lecture_date = Symbol('notificationReadDate');
 const _notification_user_id = Symbol('notificationUserId');
 const _notification_event_id = Symbol('notificationEventId');
 const _notification_deletion_date = Symbol('notificationDeletionDate');
@@ -8,9 +8,9 @@ const _notification_title = Symbol('notificationTitle');
 const _notification_message = Symbol('notificationMessage');
 
 module.exports = class notification {
-    constructor(notificationDate, notificationLectureDate, notificationUserId, notificationEventId, notificationTitle, notificationMessage) {
+    constructor(notificationDate, notificationReadDate, notificationUserId, notificationEventId, notificationTitle, notificationMessage) {
         this[_notification_date] = notificationDate;
-        this[_notification_lecture_date] = notificationLectureDate;
+        this[_notification_lecture_date] = notificationReadDate;
         this[_notification_user_id] = notificationUserId;
         this[_notification_event_id] = notificationEventId;
         this[_notification_title] = notificationTitle;
@@ -19,7 +19,7 @@ module.exports = class notification {
 
     get notificationId() { return this[_notification_id]; }
     get notificationDate() { return this[_notification_date]; }
-    get notificationLectureDate() { return this[_notification_lecture_date]; }    
+    get notificationReadDate() { return this[_notification_lecture_date]; }    
     get notificationUserId() { return this[_notification_user_id]; }
     get notificationEventId() { return this[_notification_event_id]; }
     get notificationDeletionDate() { return this[_notification_deletion_date]; }
@@ -27,7 +27,7 @@ module.exports = class notification {
     get notificationMessage() { return this[_notification_message]; }
 
     set notificationDate(newnotificationDate) { this[_notification_date] = newnotificationDate; }
-    set notificationLectureDate(newnotificationLectureDate) { this[_notification_lecture_date] = newnotificationLectureDate; }
+    set notificationReadDate(newnotificationReadDate) { this[_notification_lecture_date] = newnotificationReadDate; }
     set notificationUserId(newnotificationUserId) { this[_notification_user_id] = newnotificationUserId; }
     set notificationEventId(newnotificationEventId) { this[_notification_event_id] = newnotificationEventId; }
     set notificationDeletionDate(newnotificationDeletionDate) { this[_notification_deletion_date] = newnotificationDeletionDate; }
@@ -38,7 +38,7 @@ module.exports = class notification {
         return {
             //notificationId: this.notificationId, 
             FECHA_NOTIFICACION: this.notificationDate,
-            FECHA_LECTURA: this.notificationLectureDate,
+            FECHA_LECTURA: this.notificationReadDate,
             ID_USUARIO: this.notificationUserId,
             ID_EVENTO: this.notificationEventId,
             FECHA_BAJA: this.notificationDeletionDate,
